Update chatbot integration: simplify modal to popup windows for feature cards

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 <h1 class="hero-title">Chat Your Stress Away</h1>
                 <p class="hero-subtitle">MindEase is your friendly AI companion that listens, supports, and helps you find calm anytime, anywhere.</p>
                 <div class="cta-buttons">
-                    <button class="btn btn-primary" id="startChatBtn">Start Chatting</button>
                     <button class="btn btn-secondary" id="learnMoreBtn">Learn More</button>
                 </div>
                 <p class="trust-text">✓ Private • ✓ Judgment-Free • ✓ Always Available</p>
@@ -66,37 +65,37 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title">Why Choose MindEase?</h2>
+            <h2 class="section-title">Support for Every Challenge</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">💬</div>
-                    <h3>AI-Powered Conversations</h3>
-                    <p>Chat with an empathetic AI that understands your feelings and responds thoughtfully to support your emotional well-being.</p>
+                    <div class="feature-icon">💑</div>
+                    <h3>Social/Relationship Challenges</h3>
+                    <p>Get support and guidance for navigating social interactions, relationships, and communication challenges.</p>
+                    <button class="chat-feature-btn" data-chat-url="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2026/01/13/13/20260113134158-ULGSJ4L2.json">Chat Now</button>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">📊</div>
-                    <h3>Mood Tracking</h3>
-                    <p>Monitor your emotional patterns over time with intuitive mood tracking and visual insights into your mental health journey.</p>
+                    <div class="feature-icon">📚</div>
+                    <h3>Academic Challenges</h3>
+                    <p>Overcome study stress, academic anxiety, and exam pressure with personalized academic support.</p>
+                    <button class="chat-feature-btn" data-chat-url="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2026/01/15/10/20260115103335-CS0OHWK9.json">Chat Now</button>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🛠️</div>
-                    <h3>Personalized Coping Techniques</h3>
-                    <p>Discover and practice customized techniques designed specifically for your needs and preferences.</p>
+                    <div class="feature-icon">💰</div>
+                    <h3>Financial Issues</h3>
+                    <p>Navigate financial stress and get guidance on budgeting, financial planning, and money management.</p>
+                    <button class="chat-feature-btn" data-chat-url="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2026/01/14/03/20260114031933-2NJ3WSQP.json">Chat Now</button>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🔒</div>
-                    <h3>Complete Privacy</h3>
-                    <p>Your conversations are completely private and encrypted. We never judge, and your data stays with you.</p>
+                    <div class="feature-icon">🧠</div>
+                    <h3>Mental Health Care</h3>
+                    <p>Access comprehensive mental health support, coping strategies, and wellness resources tailored to your needs.</p>
+                    <button class="chat-feature-btn" data-chat-url="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2026/01/13/02/20260113025033-8DX2UWP6.json">Chat Now</button>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>24/7 Availability</h3>
-                    <p>Access support anytime, anywhere. MindEase is always there when you need someone to listen.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎓</div>
-                    <h3>Educational Resources</h3>
-                    <p>Learn evidence-based strategies for managing stress, anxiety, and improving your overall well-being.</p>
+                    <div class="feature-icon">💪</div>
+                    <h3>Physical Health and Wellness</h3>
+                    <p>Improve your physical well-being with guidance on fitness, nutrition, sleep, and overall wellness.</p>
+                    <button class="chat-feature-btn" data-chat-url="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2026/01/13/04/20260113041415-LRC6BDKT.json">Chat Now</button>
                 </div>
             </div>
         </div>
